--- a/app/src/main/res/layout/media_type_layout.xml
+++ b/app/src/main/res/layout/media_type_layout.xml
@@ -38,7 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
             app:trackColor="@color/white_grey_1"
-            app:trackCornerRadius="@dimen/two_dp"
+            app:trackCornerRadius="@dimen/four_dp"
+            app:trackThickness="@dimen/six_dp"
             app:indicatorDirectionLinear="leftToRight"
             />
         <TextView
