--- a/app/src/main/res/layout/video_player_activity.xml
+++ b/app/src/main/res/layout/video_player_activity.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="@dimen/material_generic_medium"
+        android:layout_marginStart="@dimen/material_generic_medium"
         android:gravity="center_vertical"
         android:visibility="gone"
         >
