--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,8 +79,8 @@
     </style>
 
     <style name="custom_action_mode_dark" parent="Widget.AppCompat.ActionMode">
-        <item name="background">@color/translucent_toolbar</item>
-        <item name="android:background">@color/translucent_toolbar</item>
+        <item name="background">@color/black_50</item>
+        <item name="android:background">@color/black_50</item>
     </style>
 
     <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.DayNight.Dialog.Alert"/>
