--- a/app/src/main/res/layout/custom_toolbar_view.xml
+++ b/app/src/main/res/layout/custom_toolbar_view.xml
@@ -35,6 +35,18 @@
         android:textStyle="bold"
         />
 
+    <LinearLayout
+        android:id="@+id/action_buttons_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintRight_toRightOf="@id/overflow_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/material_generic_medium"
+        android:layout_marginRight="@dimen/material_generic_medium"
+        />
+
     <ImageView
         android:id="@+id/overflow_button"
         app:srcCompat="@drawable/ic_baseline_more_vert_32"
