--- a/app/src/main/res/menu/video_activity.xml
+++ b/app/src/main/res/menu/video_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
+    <!--<item
         android:id="@+id/aspect_ratio"
         android:title="@string/aspect_ratio"
-        />
+        />-->
     <item
         android:id="@+id/playback_speed"
         android:title="@string/playback_speed"
