--- a/app/src/main/res/layout/video_player_activity.xml
+++ b/app/src/main/res/layout/video_player_activity.xml
@@ -64,6 +64,46 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/continue_playing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="@dimen/material_generic_medium"
+        android:layout_marginEnd="@dimen/material_generic"
+        android:layout_marginTop="@dimen/material_generic"
+        android:layout_marginBottom="@dimen/one_twenty_dp"
+        android:background="@drawable/background_curved_video_hints_highlighted"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="@dimen/eight_dp"
+        android:weightSum="1"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/continue_playing"
+            android:textSize="@dimen/twenty_four_sp"
+            android:textColor="@color/white"
+            android:layout_weight="0.7"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            />
+        <ImageView
+            android:id="@+id/close_continue_playing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/four_dp"
+            android:background="@drawable/background_curved_video_hints"
+            android:src="@drawable/ic_round_close_32"
+            android:layout_weight="0.3"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/eight_dp"
+            />
+    </LinearLayout>
+
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/video_view"
         android:layout_width="wrap_content"
