--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="navy_blue">#1a1e34</color>
     <color name="highlight_yellow">#fbc33d</color>
     <color name="highlight_yellow_70">#70fbc33d</color>
+    <color name="highlight_yellow_50">#50fbc33d</color>
     <color name="highlight_yellow_trans">#33FFEB6B</color>
     <color name="navy_blue_translucent_30">#30FFFFFF</color>
     <color name="navy_blue_alt">#262a3e</color>
