--- a/app/src/main/res/layout/quick_view_fragment.xml
+++ b/app/src/main/res/layout/quick_view_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.amaze.fileutilities.utilis.CustomCoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +9,7 @@
     android:layout_centerHorizontal="true"
     android:layout_centerInParent="true"
     android:layout_centerVertical="true"
+    android:clipChildren="false"
     android:clipToPadding="false">
 
     <com.github.chrisbanes.photoview.PhotoView
@@ -23,18 +24,65 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:src="@tools:sample/backgrounds/scenic" />
+
+    <ImageView
+        android:id="@+id/imageViewSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxHeight="@dimen/material_sheet_peek_height"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
+        tools:src="@tools:sample/backgrounds/scenic"
+        />
     <include
         android:id="@+id/custom_toolbar"
         layout="@layout/custom_toolbar"
         android:visibility="gone"
         />
-    <com.amaze.fileutilities.home_page.CustomBottomBarView
-        android:id="@+id/custom_bottom_bar"
+    <RelativeLayout
+        android:id="@+id/layoutBottomSheet"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="wrap_content"
+        android:maxHeight="@dimen/audio_player_sheet_height"
+        android:background="@drawable/background_curved_audio_sheet"
+        android:clipToPadding="false"
+        android:paddingLeft="@dimen/eight_dp"
+        android:paddingRight="@dimen/eight_dp"
+        android:paddingBottom="@dimen/eight_dp"
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="@dimen/audio_player_peek_height"
+        app:layout_behavior="com.amaze.fileutilities.utilis.DragDismissBottomSheetBehaviour"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        >
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/material_generic"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            >
+            <LinearLayout
+                android:id="@+id/bottomSheetBig"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                >
+                <com.amaze.fileutilities.home_page.CustomBottomBarView
+                    android:id="@+id/custom_bottom_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/material_generic_large"
+                    />
+                <TextView
+                    android:id="@+id/metadata"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
+</com.amaze.fileutilities.utilis.CustomCoordinatorLayout>
