--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -84,4 +84,9 @@
     </style>
 
     <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.DayNight.Dialog.Alert"/>
+
+    <style name="roundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/twenty_four_dp</item>
+    </style>
 </resources>
